# ml-monorepo

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  nx.json  package-lock.json  package.json  test_mobilenet_download.py  tsconfig.base.json
.github/workflows/: ci-e2e.yml
apps/: README.md  project.json  pyproject.toml
apps/color-tracker-ui/: jest.config.ts  project.json
apps/color-tracker-ui/src/: index.html  styles.scss
apps/color-tracker-ui/src/app/: app.config.ts  app.html  app.scss  app.spec.ts  app.ts  nx-welcome.ts
apps/color_tracker/: README.md  pubspec.yaml
apps/color_tracker/android/app/: build.gradle.kts
apps/color_tracker/ios/Runner/: Info.plist
apps/color_tracker/ios/Runner.xcodeproj/: project.pbxproj
apps/color_tracker/lib/: main.dart
apps/color_tracker/linux/: CMakeLists.txt
apps/color_tracker/linux/runner/: my_application.cc
apps/color_tracker/macos/Runner.xcodeproj/: project.pbxproj
apps/color_tracker/web/: index.html  manifest.json
apps/color_tracker/windows/: CMakeLists.txt
apps/color_tracker/windows/runner/: Runner.rc  main.cpp
apps/cv-api/: README.md  __init__.py  api_server.py  llm_service.py  pyproject.toml  test_mobilenet_download.py
apps/cv-app/: main.py
apps/cv_app/: hello.py  main.py
apps/mobile/: App.js  app.json  package-lock.json  package.json
apps/object-detection-ui/: cypress.config.ts  jest.config.ts  project.json  tsconfig.e2e.json  tsconfig.json
apps/object-detection-ui/src/: index.html
apps/object-detection-ui/src/app/: app.config.ts  app.html  app.ts  nx-welcome.ts
apps/object-detection-ui/src/e2e/: README.md  api-integration.cy.ts  dashboard.cy.ts  dashboard.po.ts  user-workflows.cy.ts
apps/tests/: test_hello.py
libs/cv-utils/: pyproject.toml
libs/cv-utils/src/cv_utils.egg-info/: PKG-INFO  SOURCES.txt
libs/od-models/: pyproject.toml
libs/od-models/src/od_models/: mobilenet_ssd_detector.py  object_dectation_tracker.py  object_detection_tracker.py
(+17 files in other folders)
