[tool.poetry]
name = "cv-api"
version = "1.0.0"
description = "FastAPI backend for color tracker"
authors = []
license = "Proprietary"
readme = "README.md"
package-mode = false



  [tool.poetry.dependencies]
  python = ">=3.10,<3.11"
  fastapi = "^0.115.0"
  uvicorn = {extras = ["standard"], version = "^0.32.0"}
  websockets = "^13.1"
  aiohttp = "^3.9.0"
  python-multipart = "^0.0.18"
  opencv-python = "^4.8.1.0"
  numpy = "~1.26.0"
  ultralytics = "^8.2.0"

  # Local dependencies
  cv-utils = {path = "../../libs/cv-utils"}
  od-models = {path = "../../libs/od-models"}

  [tool.poetry.group.dev.dependencies]
  pytest = "^8.3.4"
  httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
